--- a/index.html
+++ b/index.html
@@ -15,37 +15,53 @@
 
 
 <body>
-<!--BIG HEADER TOP-->
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Weather Machine</h1>
-    <p class="lead">Search for a 5-day forecast in ANY city!</p>
-  </div>
+<!--HEADER HERE-->
+
+<div class="grid-container">
+    <div class="item1">
+        <h1>Weather Machine</h1>
+        <p id="headerText">Search for a 5-day forecast in ANY city!</p>
+    </div>
+
+<!--SEARCH BAR HERE HERE-->
+    <div class="item2">
+        <form>
+            <div class="box">
+                <div class="form-group">
+                    <label>City,State</label>
+                    <span id="error"></span>
+                        <input type="text" id="city" >
+                        <small id="form" class="form-text text-muted">Literally anywhere...</small>
+                </div>
+                    <button type="submit" id="submitWeather" class="btn btn-primary button">Search City</button>
+            </div>  
+        </form>
+
+<!--LIST TO PLACE HISTORY SEARCHES-->
+
+        <div class="card" style="width: 22rem;">
+            <ul class="listGroup">
+              <li class="listItem"></li>
+              <li class="listItem"></li>
+              <li class="listItem"></li>
+            </ul>
+        </div>
+    </div>
+
+<!--RESULTS GO HERE-->
+
+    <div class="item3">
+       <h1></h1>
+        <ul class="weatherList">
+            <li class="weatherItem"></li>
+            <li class="weatherItem"></li>
+            <li class="weatherItem"></li>
+        </ul>
+    </div> 
+    <div class="item5">5 day forecast</div>
 </div>
 
-<!--FORM TO SEARCH CITY-->
-
-<form>
-    <div class="box">
-        <div class="form-group">
-            <label>City,State</label>
-                <input type="search" class="form-control" >
-                <small id="form" class="form-text text-muted">Literally anywhere...</small>
-        </div>
-            <button type="submit" class="btn btn-primary button">Search</button>
-    </div>  
-</form>
-
-<!--LIST GROUP TO HOLD RECENT SEARCHES-->
-
-<div class="card" style="width: 22rem;">
-    <ul class="listGroup">
-      <li class="listItem"></li>
-      <li class="listItem"></li>
-      <li class="listItem"></li>
-    </ul>
-  </div>
 
 
 
@@ -56,11 +72,7 @@
 
 
 
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
-crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script.js"></script> 
 </body>
 </html>
