--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <label>City,State</label>
                     <span id="error"></span>
-                        <input type="text" id="city" >
+                        <input type="search" id="city" >
                         <small id="form" class="form-text text-muted">Literally anywhere...</small>
                 </div>
                     <button type="submit" id="submitWeather" class="btn btn-primary button">Search City</button>
@@ -53,7 +53,7 @@
 
     <div class="item3">
        <h1></h1>
-        <ul class="weatherList">
+        <ul class="showWeatherForcast">
             <li class="weatherItem"></li>
             <li class="weatherItem"></li>
             <li class="weatherItem"></li>
