updating my weather app

--- a/index.html
+++ b/index.html
@@ -15,52 +15,21 @@
 
 
 <body>
-
-<!--HEADER HERE-->
-
-<div class="grid-container">
-    <div class="item1">
-        <h1>Weather Machine</h1>
-        <p id="headerText">Search for a 5-day forecast in ANY city!</p>
-    </div>
-
-<!--SEARCH BAR HERE HERE-->
-    <div class="item2">
-        <form>
-            <div class="box">
-                <div class="form-group">
-                    <label>City,State</label>
-                    <span id="error"></span>
-                        <input type="search" id="city" >
-                        <small id="form" class="form-text text-muted">Literally anywhere...</small>
+    <header class="container-fluid text-center text-white bg-dark p-2">
+        <h1>Weather Dashboard!</h1>
+    </header>
+    <div class ="container-fluid">
+        <div class="row">
+            <aside class="col-lg-3 bg-light">
+                <h5 class="mt-1">Search for a City:</h5>
+                <div class="form-inline form-group">
+                    
                 </div>
-                    <button type="submit" id="submitWeather" class="btn btn-primary button">Search City</button>
-            </div>  
-        </form>
-
-<!--LIST TO PLACE HISTORY SEARCHES-->
-
-        <div class="card" style="width: 22rem;">
-            <ul class="listGroup">
-              <li class="listItem"></li>
-              <li class="listItem"></li>
-              <li class="listItem"></li>
-            </ul>
+            </aside>
         </div>
     </div>
 
-<!--RESULTS GO HERE-->
 
-    <div class="item3">
-       <h1></h1>
-        <ul class="showWeatherForcast">
-            <li class="weatherItem"></li>
-            <li class="weatherItem"></li>
-            <li class="weatherItem"></li>
-        </ul>
-    </div> 
-    <div class="item5">5 day forecast</div>
-</div>
 
 
 
