--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
         </div>
     </div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="script.js"></script> 
 </body>
 </html>
